# fluent-ecs

./: Cargo.toml  README.md  docker-compose.yaml  fluent-bit-playground.conf
benches/: fluent_ecs_bench.rs
examples/: etcd_took-in.json  etcd_took-out.json  etcd_warn-in.json  etcd_warn-out.json  generic_tail_input-in.json  generic_tail_input-out.json  kubernetes-Deployment-in.json  kubernetes-Deployment-out.json  kubernetes-StatefulSet-in.json  kubernetes-StatefulSet-out.json  kubernetes_dashboard_metrics_scraper-in.json  kubernetes_dashboard_metrics_scraper-out.json  kubernetes_deployment-out.json  kubernetes_statefulset-out.json  metallb-controller-PoolReconciler-out.json  metallb-controller-cert_rotation-in.json  metallb-controller-cert_rotation-out.json  metallb-speaker-partial_join-in.json  metallb-speaker-partial_join-out.json  metallb-speaker-service_announced-in.json  metallb-speaker-service_announced-out.json  metallb_controller_poolreconciler-in.json  metallb_controller_poolreconciler-out.json  metallb_speaker_service_announced-out.json
examples/keycloak/: event_code_to_token-in.json  event_code_to_token-out.json  event_login-in.json  event_login-out.json  event_login_error_invalid_credentials-in.json  event_login_error_invalid_credentials-out.json  event_login_error_unkown_user-in.json  event_login_error_unkown_user-out.json  msg_acr_loa_map-in.json  msg_acr_loa_map-out.json
examples/metallb/: controller_poolreconciler-out.json  (+1 more)
src/: etcd.rs  keycloak.rs  kubernetes.rs  kubernetes_dashboard.rs  lib.rs  metallb.rs  model.rs  postfix.rs
(+46 files in other folders)
