[package]
name = "fluent-ecs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.192" 
serde_json = "1.0.108"
serde_bytes = "0.11.12"
serde_derive = "1.0.192"
chrono = { version = "0.4.31", features = ["serde"] }

[dev-dependencies]
rstest = "0.18.2"
assert-json-diff = "2.0.2"