[package]
name = "fluent-ecs"
description = "Converts logs to the Elastic Common Scheme"
authors = ["Raik Bieniek <raik@bieniek-it.de>"]
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.192" 
serde_json = "1.0.108"
serde_bytes = "0.11.12"
serde_derive = "1.0.192"
chrono = { version = "0.4.31",default-features = false, features = ["alloc", "std", "serde"] }
pest = "2.7.5"
pest_derive = "2.7.5"
log = "0.4.0"

[dev-dependencies]
rstest = "0.18.2"
assert-json-diff = "2.0.2"
env_logger = "0.10.0"